# hornex

./: .editorconfig  .eslintrc.js  .gitignore  README.md  Tiltfile  bun.lockb  docker-compose.yml  go.work  go.work.sum  k3d-default.yaml  lefthook.yaml  package.json  tilt_config.yaml
services/hornex-api/: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  aws_secret_manager_issuer.py  dev-api.sh  dev-celery.sh  dev.env  docker-entry-dev.sh  docker-entry.sh  docker-entrypoint.sh  prod-api.sh  psqlrc  pyproject.toml  requirements.txt  ruff.toml  wait-for-db.py  wait_for_postgres.py  wait_for_rabbitmq.py
services/hornex-api/accounts/: models.py
services/hornex-api/accounts/migrations/: 0001_initial.py  0002_leagueoflegendsaccount_tier.py  0003_alter_leagueoflegendsaccount_user.py
services/hornex-api/apps/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  webhooks.py
services/hornex-api/apps/auth/: models.py
services/hornex-api/apps/common/: models.py
services/hornex-api/apps/configs/: admin.py  models.py  serializers.py  urls.py  views.py
services/hornex-api/apps/games/: admin.py  models.py  serializers.py  urls.py  views.py
services/hornex-api/apps/invites/: apps.py  errors.py  tests.py  urls.py  views.py
services/hornex-api/apps/leagueoflegends/: admin.py  apps.py  models.py  readme.md  serializers.py  signals.py  tasks.py  test_models.py  tests.py  urls.py  views.py
services/hornex-api/apps/notifications/: admin.py  consumers.py  consumers_test.py  models.py  serializers.py  tests.py  urls.py  views.py
services/hornex-api/apps/payments/: admin.py  dto.py  gateway.py  models.py  serializers.py  tests.py  urls.py  views.py
services/hornex-api/apps/teams/: admin.py  apps.py  errors.py  models.py  request.py  serializers.py  signals.py  tests.py  urls.py  views.py
services/hornex-api/apps/tournaments/: admin.py  apps.py  cron.py  errors.py  events.py  factories.py  filters.py  models.py  publisher.py  requests.py  serializers.py  signals.py  tasks.py  test_models.py  tests.py  urls.py  views.py
services/hornex-api/apps/users/: admin.py  filters.py  models.py  serializers.py  test_models.py  tests.py  urls.py  views.py
services/hornex-api/apps/webhooks/: decorators.py  tests.py  urls.py  views.py
services/hornex-api/core/: __init__.py  asgi.py  celery.py  experiments.py  healthcheck.py  readme.md  route.py  settings.py  urls.py  wsgi.py
services/hornex-api/core/middlewares/: injectcookie.py
services/hornex-api/dev/: download-local-secrets.py
services/hornex-api/games/: urls.py
services/hornex-api/games/migrations/: 0001_initial.py  0002_initial.py
services/hornex-api/gunicorn/: gunicorn.service
services/hornex-api/helm/: spec.yaml
services/hornex-api/invites/: errors.py  serializers.py  urls.py  views.py
services/hornex-api/jwt/: authentication.py
services/hornex-api/jwt_token/: authentication.py  serializers.py  views.py
services/hornex-api/k8s/: spec.yaml
services/hornex-api/lib/challonge/: __init__.py  _api_request.py  _api_resource.py  _challonge_object.py  _match.py  _participant.py  _tournament.py  tournaments.py
services/hornex-api/lib/efi/: cert.pem  certificado.pem  client.py  http.py  mock.py  pix.py  readme.md
services/hornex-api/lib/jwt/: authentication.py
services/hornex-api/lib/logging/: logger.py
services/hornex-api/lib/mailer/: __init__.py  _accounts.py  _sender.py  _tournaments.py
services/hornex-api/lib/payments/: gateway.py
services/hornex-api/lib/rabbitmq/: __init__.py  _bus.py  _publisher.py  apps.py
services/hornex-api/lib/resend/: client.py
services/hornex-api/nginx/: nginx.conf
services/hornex-api/notifications/: consumers.py  consumers_test.py  models.py  serializers.py  tests.py  urls.py  views.py
services/hornex-api/payments/: views.py
services/hornex-api/scripts/: deploy.sh  gunicorn.sh  instance-os-dependencies.sh  nginx.sh  python-dependencies.sh  start-app.sh
services/hornex-api/teams/: admin.py  errors.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
services/hornex-api/test/: factories.py
services/hornex-api/tournaments/: admin.py  consts.py  errors.py  models.py  serializers.py  services.py  test_admin.py  test_models.py  test_services.py  tests.py  urls.py  views.py
services/hornex-api/users/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
services/hornex-api/utils/: math.py
services/hx-app/: .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
services/hx-app/games/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
services/hx-app/hxapp/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
services/hx-app/invites/: serializers.py  urls.py  views.py
services/hx-app/teams/: admin.py  apps.py  errors.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
services/hx-app/tournaments/: admin.py  admin_test.py  events.py  filters.py  models.py  pagination.py  serializers.py  services.py  services_test.py  test_admin.py  test_services.py  tests.py  urls.py  validators.py  views.py
services/hx-app/users/: models.py  serializers.py  urls.py  views.py
(+1243 files in other folders)
