[tool.poetry]
name = "hornex-api"
version = "0.1.0"
description = ""
authors = ["Pedro <pedro357bm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
Markdown = "^3.4.4"
djangorestframework-simplejwt = "^5.3.0"
drf-yasg = "^1.21.7"
requests = "^2.31.0"
coverage = "^7.3.0"
django-cors-headers = "^4.2.0"
faker = "^20.0.0"
channels = "^4.0.0"
django-redis = "^5.4.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
channels-redis = "^4.1.0"
asgiref = "^3.7.2"
daphne = "^4.0.0"
whitenoise = "^6.6.0"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
watchdog = "^3.0.0"
structlog = "^23.2.0"
django-crontab = "^0.7.1"
resend = "^0.6.0"
stripe = "^7.11.0"
flower = "^2.0.1"
django = "^5.0.2"
boto3 = "^1.34.61"
aws-secretsmanager-caching = "^1.1.1.5"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.1"
mock = "^5.1.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = [
    "DJ", # flake8-django
    "E", # pycodestyle Error
    "F", # Pyflakes
    "I", # isort
    "RUF", # Ruff-specific rules
    "UP", # pyupgrade
    "W", # pycodestyle Wrning
    "YTT", # flake8-2020
]
target-version = "py311"
ignore = [
  ## TODO Fix and enable these
  "DJ001",
  "DJ008",
  "DJ012",
  "RUF012",
  "UP008",
]

[tool.ruff.lint]
ignore = ["UP007", "RUF012"]

[tool.ruff.format]
quote-style = "double"
